--- a/index.html
+++ b/index.html
@@ -15,56 +15,16 @@
 <body>
     <!-- TODO: Include all your code for the header and home page here -->
     
+    <!-- Here header will be added by common.js-->
 
     <main>
-        <a href="./html/postslist.html" class="btn post-btn">All posts</a>
+
+
+        <button  class="btn post-btn">All posts</button>
         <button class="btn create-post-btn">create post</button>
-<!--
-        <div class="modal signin-modal">
-            <div class="signin">
-                <div class="form-title">
-                    <h2>Welcome Back!</h2>
-                    <div class="close-btn"><i class="fa fa-times" aria-hidden="true"></i></div>
-                </div>
-                <form>
-                    <label for="signin-username">Username</label>
-                    <input id='signin-username' type="text" placeholder="Enter your username" required>
 
 
-                    <label for="signin-pass">Password</label>
-                    <input id='signin-pass' type="password" placeholder="Enter your password" required>
-                    <button class="btn form-submit">signup</button>
-                </form>
-                <p>Not a member ?<button class="signup-link">signup</button></p>
-
-            </div>
-        </div>
-
-        <div class="modal signup-modal">
-
-            <div class="signup">
-                <div class="form-title">
-                    <h3>Get started</h3>
-                    <div class="close-btn"><i class="fa fa-times" aria-hidden="true"></i></div>
-                </div>
-                <form>
-                    <label for="signup-name">Name</label>
-                    <input id='signup-name' type="text" placeholder="Enter your name" required>
-
-                    <label for="signup-username">Username</label>
-                    <input id='signup-username' type="text" placeholder="Enter your username" required>
-
-                    <label for="signup-pass">Password</label>
-                    <input id='signup-pass' type="password" placeholder="Enter your password" required>
-
-                    <label for='signup-pass-confirm'>Confirm Password</label>
-                    <input id='signup-pass-confirm' type="password" placeholder="Re-enter your password" required>
-
-                    <button class="btn form-submit">signup</button>
-                </form>
-            </div>
-        </div>
-    -->
+        <!--Modal to create a post-->
         <div class="modal create-post-modal">
 
             <div class="create-post">
@@ -74,14 +34,14 @@
                 </div>
                 <form>
                     <label for="content-title">Title</label>
-                    <input id="content-title" type="text" placeholder="Enter title of your post" required>
+                    <input id="content-title" type="text" placeholder="Enter title of your post" required />
 
-                    <label for="content">Content</label>
-                    <textarea id='content' placeholder="Enter your username"></textarea>
+                    <label for="content-desc">Content</label>
+                    <textarea id='content-desc' placeholder="Enter your username" required></textarea>
 
-                    <button class="btn form-submit">create</button>
+                    <button class="btn form-submit submit-post-btn" >create</button>
                 </form>
-                <!---->
+                
             </div>
         </div>
 
